--- a/divisiblePrintProject/pom.xml
+++ b/divisiblePrintProject/pom.xml
@@ -14,5 +14,16 @@
         <version>4.12</version>
         <scope>test</scope>
     </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.7.19</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
     </dependencies>
 </project>
